# RAG-against-the-machine

./: .gitignore  Makefile  README.md  a.txt  pyproject.toml  tips.txt
data/output/search_results/: dataset_code_public.json  dataset_docs_public.json
data/processed/: data.csc.index.npy  indices.csc.index.npy  indptr.csc.index.npy  params.index.json  vocab.index.json
exams_pkg/evaluations/retrieval/2026-05-21_12-31-11/search_results/: dataset_code_private.json
exams_pkg/evaluations/retrieval/2026-05-21_12-39-16/search_results/: dataset_docs_private.json
exams_pkg/evaluations/retrieval/2026-05-21_12-41-47/search_results/: dataset_code_private.json  dataset_docs_private.json
exams_pkg/evaluations/retrieval/2026-05-21_12-43-30/search_results/: dataset_code_private.json  dataset_docs_private.json
src/: __main__.py  chunker.py  evaluator.py  generator.py  indexer.py  maria.py  models.py  pipeline.py  retriever.py
src/utils/: __init__.py  colors.py  file_utils.py  print_utils.py
