[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bm25s>=0.3.8",
    "fire>=0.7.1",
    "flake8>=7.3.0",
    "jsonloader>=0.9.1",
    "langchain>=1.2.15",
    "langchain-text-splitters>=1.1.1",
    "mypy>=2.1.0",
    "pydantic>=2.13.4",
    "tiktoken>=0.12.0",
    "torch>=2.12.0",
    "tqdm>=4.67.3",
    "transformers>=4.40.0",
    "webcolors>=25.10.0",
]
